--- a/vignettes/wikipedia_start.Rmd
+++ b/vignettes/wikipedia_start.Rmd
@@ -10,21 +10,18 @@ vignette: >
 
 
 
-This document provides an updated and efficient version of the Wikidata-related part of those works, and points at some patterns that are common when processing a large number of Wikidata items with `tidywikidatar`.
-
-
-## Wikipedia as a starting point
-
-In the world of Wikidata, the most efficient way of getting data is usually through well-crafted [SPARQL queries](https://www.wikidata.org/wiki/Wikidata:SPARQL_tutorial). However, what is technically most efficient, may not be so efficient if someone is unfamiliar with the structure of such queries or with how they can be best applied to to get the most out of Wikidata.
+In the world of Wikidata, the most efficient way of getting data is usually through well-crafted [SPARQL queries](https://www.wikidata.org/wiki/Wikidata:SPARQL_tutorial). However, what is theoretically technically most efficient, may be highly impractical if someone is unfamiliar with the structure of such queries or with how they can be best applied to to get the most out of Wikidata.
 
 Most people who turn to Wikidata will however be familiar with its more famous sister project, Wikipedia. As this post will explain, Wikipedia pages can be used as a starting point for getting data out of Wikidata.
 
 ## Setup and caching
 
-It is generally advisable to enable cache at the beginning of each script. Thanks to caching, when a block of code based on `tidywikidatar` is re-run it gives results almost instantly. But given that `tidywikidatar` queries for Wikidata items one at a time, it can be relatively time-consuming when it is run for the first time. So be patient when you run some of the commands below for the first time, and considering testing code with only a sample of the data at first (e.g. by adding something such as `slice_sample(n = 100)` to the data frame you use as a starting point).
+An introductory note on caching. It is generally advisable to enable cache at the beginning of each script. Thanks to caching, when a block of code based on `tidywikidatar` is re-run it gives results almost instantly. But given that `tidywikidatar` queries for Wikidata items one at a time, it can be relatively time-consuming when it is run for the first time. So be patient when you run some of the commands below for the first time, and considering testing code with only a sample of the data at first (e.g. by adding something such as `slice_sample(n = 100)` to the data frame you use as a starting point).
 
 
-Especially if you intend to use Wikidata in different projects, it may make sense to have the cache stored in a folder outside the current project. As the data can be recovered, it is usually unnecessary to backup the cache folder. Most users should be perfectly fine using the default SQLite database for caching.
+Especially if you intend to use Wikidata in different projects, it may make sense to have the cache stored in a folder outside the current project. As the data can be recovered, it is usually unnecessary to backup the cache folder, and unwise to keep it in folder that are constantly synced with online services.
+
+Most users should be perfectly fine using the default SQLite database for caching.
 
 
 ```r
@@ -145,7 +142,7 @@ meps9_df <- meps_df %>%
 
 It appears that 801 have actually been members of the "Ninth European Parliament".
 
-Out of curiosity, and as a quality check, let's see who are the MEPs mentioned in the page who have not been members of the ninth legislature.
+Out of curiosity, and as a quality check, let's see who are the MEPs mentioned in the page who *have not* been members of the ninth legislature.
 
 
 
@@ -163,13 +160,13 @@ anti_join(meps_df,
 #> 4 Q57630    Valdis Dombrovskis
 ```
 
-Indeed, all of them gave up their seat for one reason of another.
+Indeed, all of them gave up their seat for one reason or another.
 
-So we can proceed working on the assumption that we now have a reasonably complete list of MEPs. We can then take it as a starting point for all sorts questions, such as which position they held before becoming MEPs (or at the same time as being MEPs), or who among them joined the European Parliament after the beginning of the legislature. This is, for example, a list of MEPs who joined the parliament only in 2021, and who did they replace:
+As we have reason to believe the Wikipedia page we have used as a starting point is reasonably complete, we can now proceed assuming that we now a reasonably complete list of MEPs of the ninth legislature. We can then take it as a starting point for all sorts questions, such as which position they held before becoming MEPs (or at the same time as being MEPs), or who among them joined the European Parliament after the beginning of the legislature. This is, for example, a list of MEPs who joined the parliament only in 2021, and with reference to whom did they replace:
 
 
 ```r
-meps9_df %>%
+replacing_meps_df <- meps9_df %>%
   tw_get_qualifiers(p = "P39") %>%
   filter(qualifier_id == "Q27169", # member of the european parliament
          qualifier_property == "P580") %>% # start time
@@ -182,6 +179,8 @@ meps9_df %>%
             new_mep = tw_get_label(id),
             previous_mep_id = qualifier_value,
             previous_mep = tw_get_label(qualifier_value))
+
+replacing_meps_df
 #> # A tibble: 9 × 4
 #>   new_mep_id new_mep                       previous_mep_id previous_mep     
 #>   <chr>      <chr>                         <chr>           <chr>            
@@ -195,6 +194,29 @@ meps9_df %>%
 #> 8 Q18225970  Tom Vandenkendelaere          Q12869          Kris Peeters     
 #> 9 Q63224243  Ernő Schaller-Baross          Q731042         József Szájer
 ```
+Curiously, we find that there are two current MEPs who have replaced a colleague after the beginning of the legislature more than once. Can we confirm in which legislatures those who have replaced a colleague more than once have served as MEPs? Of course.
+
+
+```r
+replacing_meps_df %>%
+  group_by(new_mep_id) %>%
+  count(name = "n") %>%
+  filter(n > 1) %>%
+  pull(new_mep_id) %>%
+  tw_get_qualifiers(p = "P39") %>%
+  filter(qualifier_property == "P2937", # parliamentary term
+         qualifier_id == "Q27169") %>%  # as MEP
+  tw_label() %>%
+  transmute(mep = id, legislature = qualifier_value)
+#> # A tibble: 4 × 2
+#>   mep                  legislature               
+#>   <chr>                <chr>                     
+#> 1 Tom Vandenkendelaere Eighth European Parliament
+#> 2 Tom Vandenkendelaere Ninth European Parliament 
+#> 3 João Pimenta Lopes   Eighth European Parliament
+#> 4 João Pimenta Lopes   Ninth European Parliament
+```
+
 
 This [blog post](https://medium.com/european-data-journalism-network/a-new-r-package-for-exploring-the-wealth-of-information-stored-by-wikidata-fe85e82b6440) presents some examples of the way Wikidata works based on MEPs, and they can easily be replicated taking it from here.
 
@@ -224,7 +246,7 @@ meps9_pob_df <- meps9_df %>%
 
 ```
 
-We have a place of birth on the records for 795 MEPs out of 801. Not bad. We could use some proxy for the cases when such information is unavailable, for example using properties such as "residence" ([P551](residence)) or the earliest place where they got their education, but for the time being we'll live it at that.
+We have a place of birth on the records for 795 MEPs out of 801. Not bad. We could use some proxy for the cases when such information is unavailable, for example using properties such as "residence" ([P551](residence)) or the earliest place where they got their education, but for the time being we will leave it at that.
 
 We could now easily place these data on a map (code example not run to remove dependency on external files and packages).
 
@@ -260,11 +282,13 @@ meps9_pob_df %>%
   ggplot2::theme_minimal()
 ```
 
-And we can notice that quite a few MEPs were not born in an EU country. We could then geocode the locations, or ask Wikidata in which country the place of birth is located.
+And we can notice that quite a few MEPs were not born in an EU country. We could then geocode the locations, or ask Wikidata in which country their place of birth is located.
 
 Here we already start to meet some of the quirks of Wikidata.
 
-The question "in which country is this city located" seems straightforward, but as illustrated [in the package readme](https://edjnet.github.io/tidywikidatar/#getting-the-right-property-when-more-than-one-is-available) it actually isn't always the case, as, for example, London has many values for the property "country", all the way from "Roman Empire" through "United Kingdom". Enabling the `only_first` parameters, which is a the most efficient option in many circumstances, is not a sensible solution in this case, as predicting the order of properties is not straightforward. To make things easier `tidywikidatar` includes dedicated parameters: `preferred` (which gives back the value recorded as "preferred"), and `latest_start_time` (which checks the qualifiers, and selects the one with the most recent "start time").
+The question "in which country is this city located" seems straightforward, but as illustrated [in the package readme](https://edjnet.github.io/tidywikidatar/#getting-the-right-property-when-more-than-one-is-available) it actually isn't always the case, as, for example, London has many values for the property "country", all the way from "Roman Empire" through "United Kingdom". Enabling the `only_first` parameters, which is a the most efficient option in many circumstances, is not a sensible solution in this case, as predicting the order of properties is not straightforward.
+
+To make things easier in such circumstances `tidywikidatar` includes dedicated parameters: `preferred` (which gives back the value recorded as "preferred"), and `latest_start_time` (which checks the qualifiers, and selects the one with the most recent "start time").
 
 
 ```r
