fix typo in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -121,7 +121,7 @@ which, as expected, will give me another wikidata id. But what does, "Q1345" sta
 tw_get_label(id = "Q1345")
 ```
 
-Alright, I know where Philadelphia, but if it was a smaller place, perhaps I'd need to ask in which country it is located. So I would ask for the correspondent property, P17.
+Alright, I know where Philadelphia is, but if it was a smaller place, perhaps I'd need to ask in which country it is located. So I would ask for the correspondent property, P17.
 
 ```{r}
 tw_get_property(id = "Q1345", p = "P17")
